<resources>
    <string name="app_name">GreenTech-Android</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="nav_drawer_title">GreenTech</string>
    <string name="nav_drawer_item_1">Maps</string>
    <string name="nav_drawer_item_2">Educational</string>
    <string name="nav_drawer_item_3">Search</string>
    <string name="nav_drawer_item_4">Upload</string>

    <string name="add_entry_educational_title">Add New Resource</string>
    <string name="add_entry_educational_value_1">Resource Name</string>
    <string name="add_entry_educational_value_2">Resource Link</string>
    <string name="add_entry_educational_value_3">Description</string>
    <string name="add_entry_educational_textbox_1">Enter Name</string>
    <string name="add_entry_educational_textbox_2">www.example.com</string>
    <string name="add_entry_educational_textbox_3">Enter Resource Description</string>

    <string name="add_entry_maps_title">Add New Site\n(*required field)</string>
    <string name="edit_entry_maps_title">Edit Site\n(*required field)</string>
    <string name="add_entry_maps_value_1">*Title</string>
    <string name="add_entry_maps_textbox_1">Title</string>
    <string name="add_entry_maps_value_2">*Facility Type</string>
    <string name="add_entry_maps_textbox_2">Facility Type</string>
    <string name="add_entry_maps_value_3">Facility Status</string>
    <string name="add_entry_maps_textbox_3">Facility Status</string>
    <string name="add_entry_maps_value_4">Power</string>
    <string name="add_entry_maps_textbox_4">Power</string>
    <string name="add_entry_maps_value_5">Fuel</string>
    <string name="add_entry_maps_textbox_5">Fuel</string>
    <string name="add_entry_maps_value_6">Secondary Fuel</string>
    <string name="add_entry_maps_textbox_6">Secondary Fuel</string>

    <string name="entry_dialog_positive_button">SAVE</string>
    <string name="entry_dialog_negative_button">CANCEL</string>
    <string name="view_dialog_positive_button">CLOSE</string>
</resources>
