<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/add_entry_educational">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dialog_margin_left"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/add_entry_educational_value_1"
        android:textSize="@dimen/add_entry_educational_text_size"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dialog_margin_left"
        android:layout_marginRight="@dimen/dialog_margin_left"
        android:layout_marginTop="@dimen/add_entry_edittext_margin_top"
        android:hint="@string/add_entry_educational_textbox_1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dialog_margin_left"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/add_entry_educational_value_2"
        android:textSize="@dimen/add_entry_educational_text_size"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dialog_margin_left"
        android:layout_marginRight="@dimen/dialog_margin_left"
        android:layout_marginTop="@dimen/add_entry_edittext_margin_top"
        android:hint="@string/add_entry_educational_textbox_2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dialog_margin_left"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/add_entry_educational_value_3"
        android:textSize="@dimen/add_entry_educational_text_size"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dialog_margin_left"
        android:layout_marginRight="@dimen/dialog_margin_left"
        android:layout_marginTop="@dimen/add_entry_edittext_margin_top"
        android:hint="@string/add_entry_educational_textbox_3"/>

</LinearLayout>